Some improvements to the Farm Colector API